cmake_minimum_required(VERSION 2.6)
set(CMAKE_BUILD_TYPE ${KONOHA_BUILD_TYPE})

project(clearsilver)

find_path(HAVE_CLEARSILVER_H "ClearSilver/ClearSilver.h" PATHS ${INCLUDE_DIRS})
if(HAVE_CLEARSILVER_H)

find_library(LIB_NEO_CS neo_cs)
find_library(LIB_NEO_CGI neo_cgi)
find_library(LIB_NEO_UTL neo_utl)
find_library(LIB_Z z)
set(CLEARSILVER_LIBS ${LIB_NEO_CS} ${LIB_NEO_UTL} ${LIB_NEO_CGI} ${LIB_Z})

set(PACKAGE_SOURCE_CODE clearsilver.c)
set(PACKAGE_SCRIPT_CODE clearsilver.k)

if(NOT KONOHA_VERSION)
    set(KONOHA_VERSION "1.0")
endif(NOT KONOHA_VERSION)

set(PACKAGE_NAME    ${PROJECT_NAME})
set(KONOHA_PACKAGE_DIR konoha/package/${KONOHA_VERSION}/konoha.${PROJECT_NAME})

set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR}
    ${KONOHA_INCLUDE_DIRS} ${HAVE_CLEARSILVER_H}/ClearSilver)
include_directories(${INCLUDE_DIRS})

add_definitions(-D_SETUP)

add_library(${PACKAGE_NAME} SHARED ${PACKAGE_SOURCE_CODE})
set_target_properties(${PACKAGE_NAME} PROPERTIES PREFIX "")
target_link_libraries(${PACKAGE_NAME} konoha ${CLEARSILVER_LIBS})

install(TARGETS ${PACKAGE_NAME} DESTINATION ${KONOHA_PACKAGE_DIR})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_SCRIPT_CODE} DESTINATION ${KONOHA_PACKAGE_DIR})

endif(HAVE_CLEARSILVER_H)

