cmake_minimum_required(VERSION 2.6)
set(CMAKE_BUILD_TYPE ${KONOHA_BUILD_TYPE})

project(wsgi)

set(PACKAGE_SCRIPT_CODE wsgi.k)

if(NOT KONOHA_VERSION)
    set(KONOHA_VERSION "1.0")
endif(NOT KONOHA_VERSION)

set(KONOHA_PACKAGE_DIR konoha/package/${KONOHA_VERSION}/konoha.${PROJECT_NAME})

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_SCRIPT_CODE} DESTINATION ${KONOHA_PACKAGE_DIR})
